<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_ok"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/txt_meal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txt_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_meal_title"
                android:layout_marginTop="10dp"
                android:hint="@string/recipe"
                android:inputType="textCapSentences|textMultiLine"/>

            <EditText
                android:id="@+id/txt_number_of_servings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_recipe"
                android:layout_marginTop="10dp"
                android:hint="@string/number_of_servings"
                android:inputType="number"/>

            <TextView
                android:id="@+id/tv_prep_time_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_number_of_servings"
                android:layout_marginTop="10dp"
                android:text="@string/prep_time"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_prep_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_prep_time_header"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="0:00"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
